Sidebar overflow fixes (#257)
* overflow fixes

* changed sidebar width to 215px

* sidebar window controls fix for macOS

* reverted the macOS style conditions

for the window controls

* sticky actions

* Changed sticky box background and border

* Refactored Sidebar CSS

* Make sure the fixed element will not cover any other elements

* Fixed Linting Error

* Revert "Fixed Linting Error"

This reverts commit 3766aaf4ffc06717239dc819be65383c2ecfb73f.

* Revert "Make sure the fixed element will not cover any other elements"

This reverts commit 1349ff4a5a5b4244e204cd73e75035b6dcafb6cd.

* Revert "Refactored Sidebar CSS"

This reverts commit 0a1a2c74ad921fb502880ef7811f8a9e0475d3db.

--- a/static/css/general.css
+++ b/static/css/general.css
@@ -13,6 +13,14 @@ body,
   animation: fadein 0.5s;
 }
 
+body {
+  overflow-y: hidden;
+}
+
+#root {
+  min-width: min-content;
+}
+
 @keyframes fadein {
   from {
     opacity: 0;
